--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="js/boot.js"></script>
         <script src="js/load.js"></script>
         <script src="js/menu.js"></script>
+        <script src="js/play.js"></script>
         <script src="js/main.js"></script>
         
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
@@ -18,6 +19,6 @@
     <body>
         <h1>Projekt Leo</h1>
         <div id="gameViewpoint"></div>
-        <h2>by Will Bradley, Julian Smith and Ashley Scott</h2>
+        <h2>by Will Bradley, Ashley Scott and Julian Smith</h2>
     </body>
 </html>
