Added buttons and more states

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
         
     </head>
     <body>
-        <h1>Projekt Leo</h1>
+        <h1>Projekt Leo*</h1>
         <div id="gameViewpoint"></div>
         <h2>by Will Bradley, Ashley Scott and Julian Smith</h2>
+        <h3>*Never let Julian come up with project names again</h3>
     </body>
 </html>
