Updates to client to connect to server and show output, refactor connector.js to network.js

--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
         
         <script src="libs/phaser/phaser.js"></script>
         <script src="libs/pomelo/build/build.js" type="text/javascript"></script>
-        <script type="text/javascript">
-            require('boot');
-        </script> 
-        <script src="client/connector.js"></script>
-
+        <script type="text/javascript">require('boot');</script> 
+        <script src="client/network.js"></script>
         <script src="client/boot.js"></script>
         <script src="client/load.js"></script>
         <script src="client/menu.js"></script>
