Added player selction screen and improved code base

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <script src="client/network.js"></script>
         <script src="client/boot.js"></script>
         <script src="client/load.js"></script>
+        <script src="client/button.js"></script>
         <script src="client/menu.js"></script>
+        <script src="client/play.js"></script>
+        <script src="client/char.js"></script>
         <script src="client/main.js"></script>
         
         <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
