--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
         
         <script src="libs/phaser/phaser.js"></script>
         <script src="libs/pomelo/build/build.js" type="text/javascript"></script>
-        <script type="text/javascript">require('boot');</script> 
+        <script type="text/javascript">require('boot');</script>
+        <script src="client/common.js"></script>
+        <script src="client/protocol.js"></script>
         <script src="client/network.js"></script>
         <script src="client/boot.js"></script>
         <script src="client/load.js"></script>
-        <script src="client/button.js"></script>
         <script src="client/menu.js"></script>
+        <script src="client/lobby.js"></script>
         <script src="client/play.js"></script>
         <script src="client/char.js"></script>
         <script src="client/main.js"></script>
@@ -21,9 +23,8 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>Projekt Leo*</h1>
+        <h1>Projekt Leo</h1>
         <div id="gameViewpoint"></div>
         <h2>by Will Bradley, Ashley Scott and Julian Smith</h2>
-        <h3>*Never let Julian come up with project names again</h3>
     </body>
 </html>
