Move GUI event listeners from GUIManager to GUIListeners

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <script src="client/Data/ScreenData.js"></script>
         <script src="client/Data/PlayerData.js"></script>
 
+        <!-- Event listeners -->
+        <script src="client/Listeners/GUIListeners.js"></script>
+
         <!-- Client data management --> 
         <script src="client/Managers/SettingsManager.js"></script>
         <script src="client/Managers/ProtocolManager.js"></script>
