Adding Julian's changes to the repository

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </script>
     </head>
     <body>
-        <h1>Projekt Leo</h1>
+        <!-- <h1>Projekt Leo</h1> -->
         <div id="game-viewport"></div>
         
         <div id="server-settings" class="pause-menu background">
