Foundation for in-lobby state, waiting for a player

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <!-- Game data management -->
         <script src="./client/Data/ScreenData.js"></script>
         <script src="./client/Data/PlayerData.js"></script>
+        <script src="./client/Data/LobbyData.js"></script>
 
         <!-- Event listeners -->
         <script src="./client/Listeners/GUIListeners.js"></script>
@@ -40,8 +41,9 @@
         <!-- Client game states -->
         <script src="./client/States/MenuState.js"></script>
         <script src="./client/States/LobbyState.js"></script>
-        <script src="./client/States/PlayState.js"></script>
+        <script src="./client/States/WaitState.js"></script>
         <script src="./client/States/CharState.js"></script>
+        <script src="./client/States/PlayState.js"></script>
         
         <!-- ScreenData and Pomelo startup -->
         <script type="text/javascript">
