Limit the size of the viewport to 1024px. (larger screen sizes would allow other players to have an advantage in game)

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <script src="./client/Data/ScreenData.js"></script>
         <script src="./client/Data/PlayerData.js"></script>
         <script src="./client/Data/LobbyData.js"></script>
+        <script src="./client/Data/NetData.js"></script>
 
         <!-- Event listeners -->
         <script src="./client/Listeners/GUIListeners.js"></script>
@@ -109,7 +110,7 @@
         </script>
     </head>
     <body>
-        <!-- <h1>Projekt Leo</h1> -->
+        <h1>Projekt Leo</h1>
         <div id="game-viewport"></div>
         
         <div id="server-settings" class="pause-menu background">
