--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <script src="./client/Data/PlayerData.js"></script>
         <script src="./client/Data/LobbyData.js"></script>
         <script src="./client/Data/NetData.js"></script>
+        <script src="./client/Data/NetPlayer.js"></script>
 
         <!-- Event listeners -->
         <script src="./client/Listeners/GUIListeners.js"></script>
