Game now starts only after players are ready and a 3 second count down.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <script src="./libs/sfs2x/sfs2x-api-1.7.2.js"></script>
         <script src="./libs/toastr/toastr.min.js"></script>
 
+        <script src="./client/Managers/GameEngine.js"></script>
+        
         <!-- Client global definitions and common functions -->
         <script src="./client/Global/defines.js"></script>
         <script src="./client/Global/common.js"></script>
